fix spacing in Conversation display. Place send buttons on right side of input fields in Conversation and Create Message. Add toasts in Create Message.

--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -17,7 +17,7 @@ body {
   justify-content: space-between;
   height: 5vh;
   border: solid black 1px;
-  border-radius: 0.625rem;
+  /* border-radius: 0.625rem; */
   padding: 0.25rem 1rem;
 }
 
