--- a/src/css/Messages.css
+++ b/src/css/Messages.css
@@ -28,7 +28,7 @@
 
 .conversation-list > a:hover {
   background-color: rgba(177, 172, 171, 0.6);
-  border-radius: 0.625rem;
+  /* border-radius: 0.625rem; */
   padding: 0.5rem;
 }
 
@@ -37,9 +37,9 @@
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
-  padding: 0 2.5vw;
+  padding: 1rem;
   border: solid black 1px;
-  border-radius: 0.625rem;
+  /* border-radius: 0.625rem; */
 }
 
 #messages-directory {
@@ -49,5 +49,5 @@
   width: 20vw;
   gap: 0.75rem;
   border: solid black 1px;
-  border-radius: 0.625rem;
+  /* border-radius: 0.625rem; */
 }
